<resources>
    <string name="app_name">Estisharati User</string>
    <string name="agora_app_id" translatable="false">29c6b00fa7ba4e1eaa2c52d3ef791786</string>
    <string name="agora_access_token" translatable="false"></string>
    <string name="facebook_app_id" translatable="false">1151513752466417</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1151513752466417</string>
    <string name="facebook_client_token" translatable="false">56789</string>
    <string name="internet_connection_failed">Internet Connection Failed</string>
    <string name="please_check_your_internet_connection_and_try_again">Please check your internet connection and try again</string>
    <string name="something_went_wrong">Data not fetch successfully!</string>
    <string name="your_network_connection_is_slow_please_try_again">Your network connection is slow, please try again.</string>
    <string name="something_went_wrong_on_backend_server">Something went wrong on backend server!</string>
    <string name="login">Login</string>
    <string name="could_not_get_your_device_token_please_try_again">Could not get your device token please try again</string>
    <string name="register">Register</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="congratulation">Congratulation!</string>
    <string name="win_text">You got a free course as a gift for registering in Estisharati platform</string>
    <string name="take_me">Visit</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="login_caps">LOGIN</string>
    <string name="by_continuing_you_accept">By Continuing you accept</string>
    <string name="terms_and_policy">terms and policy</string>
    <string name="don_t_have_an_account">Don\'t have an account !</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone</string>
    <string name="register_caps">REGISTER</string>
    <string name="already_have_account">Already have account !</string>
    <string name="cancel">CANCEL</string>
    <string name="ok">OK</string>
    <string name="usd">AED</string>
    <string name="price">السعر</string>
    <string name="ability_to_download_course_videos">ability to download course videos</string>
    <string name="you_can_not_download_course_videos">You can not download course videos</string>
    <string name="buy_now">BUY NOW</string>
    <string name="start_course">START COURSE</string>
    <string name="request_consultation_now">Request Consultation Now</string>
    <string name="now_you_can_forward_the_message">Now you can forward the message!</string>
    <string name="reply">Reply</string>
    <string name="please_enter_your_reply">please enter your reply !</string>
    <string name="total_course">Total Course : </string>
    <string name="complete">complete</string>
    <string name="video_call">Video Call </string>
    <string name="voice_call">Voice Call </string>
    <string name="written_chat">Characters</string>
    <string name="written_chat_package">Written Chat</string>
    <string name="Please_wait">Please wait...</string>
    <string name="meeting">16 meetings\n(60 min each)</string>
    <string name="meeting2">1 Hour</string>
    <string name="alert">Alert</string>
    <string name="estisharati_notification_settings">Estisharati Notification Settings</string>
    <string name="unable_to_get_the_image_please_try_different_folder">Unable to get the file please try different folder !</string>
    <string name="forward_cancel">Forward cancel !</string>
    <string name="forward_to">Forward to...</string>
    <string name="online">Online</string>
    <string name="last_seen">Last seen</string>
    <string name="incoming_call">Incoming call</string>
    <string name="you_are_receiving_voice_call_from">You are receiving voice call from </string>
    <string name="you_are_receiving_video_call_from">You are receiving video call from</string>
    <string name="the_person_you_are_calling_is_busy_please_try_again_later">The person you are calling is busy please try again later</string>
    <string name="enter_message_before_send">Enter message before send !</string>
    <string name="you">You</string>
    <string name="image_uploading">Image uploading...</string>
    <string name="please_wait_while_preparing_to_call">Please wait while preparing to call...</string>
    <string name="push_notificaiton_not_send">Push notificaiton not send !</string>
    <string name="oops_notification_sending_problem">Oops notification sending problem !</string>
    <string name="consultation_description">Consultation Description</string>
    <string name="replied_successfully">Replied successfully !</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="enter_valid_phone_number">Enter valid phone number</string>
    <string name="enter_your_message">Enter your message</string>
    <string name="course_description">Course Description</string>
    <string name="hours">"Hours "</string>
    <string name="videos">Videos</string>
    <string name="chapters">Chapters</string>
    <string name="course_content">Course Content</string>
    <string name="instructor">Instructor</string>
    <string name="comments">Comments</string>
    <string name="this_mobile_not_capable_for_playing_this_video">Oops. This mobile not capable for playing this video !</string>
    <string name="course_videos">Course Videos</string>
    <string name="documents">Documents</string>
    <string name="there_is_no_favorite_consultant_available">There is no favorite consultant available !</string>
    <string name="there_is_no_favorite_courses_available">There is no favorite courses available !</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="password_at_least_8_characters_including_a_lower_case_letteran_uppercase_lettera_number_and_one_special_character">Password at least 8 characters including a lower-case letter, an upper–case letter, a number and one special character</string>
    <string name="enter_confirm_password">Enter confirm password</string>
    <string name="new_password_and_confirm_password_not_same">New password and Confirm password not same</string>
    <string name="your_call_was_not_accepted">Your call was not accepted !</string>
    <string name="your_call_was_cancelled">Your call was cancelled</string>
    <string name="your_call_was_ended">Your call was ended</string>
    <string name="there_is_no_response_your_call">There is no response your call</string>
    <string name="automatically_rejected_on">Automatically rejected on</string>
    <string name="sec">sec</string>
    <string name="we_need_permission_for_this_call">We need permission for this call !</string>
    <string name="there_is_no_legal_advice_available">There is no legal advice available !</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="enter_vaid_phone_number">Enter vaid phone number</string>
    <string name="enter_password">Enter password</string>
    <string name="you_did_not_purchase_any_consultation_till_now">You did not purchase any consultation till now !</string>
    <string name="very_bad">Very bad</string>
    <string name="bad">Bad</string>
    <string name="average">Average</string>
    <string name="good">Good</string>
    <string name="very_good">Very good</string>
    <string name="very_impressive">Very impressive</string>
    <string name="please_wait_while_loading">Please wait while loading...</string>
    <string name="you_did_not_purchase_any_course_till_now">You did not purchase any course till now !</string>
    <string name="please_feel_free_to_leave_your_comments">Please feel free to leave your comments</string>
    <string name="your_rating_and_comments_submitted_successfully">Your rating and comments submitted successfully !</string>
    <string name="you_did_not_purchase_any_packages_till_now">You did not purchase any packages till now !</string>
    <string name="could_not_get_image">Could not get image</string>
    <string name="profile_picture_is_updating">Profile picture is updating...</string>
    <string name="enter_first_name">Enter first name</string>
    <string name="enter_last_name">Enter last name</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="enter_valid_email_address">Enter valid email address</string>
    <string name="profile_is_updating">Profile is updating...</string>
    <string name="enter_your_current_password">Enter your current password !</string>
    <string name="enter_your_new_password">Enter your new password !</string>
    <string name="enter_your_confirm_password">Enter your confirm password !</string>
    <string name="there_is_no_notification_available">There is no notification available !</string>
    <string name="there_is_no_offer_consultant_available">There is no offer consultant available !</string>
    <string name="there_is_no_offer_courses_available">There is no offer courses available !</string>
    <string name="online_cources">Online Cources</string>
    <string name="chat">Chat</string>
    <string name="ask_for_advice">Ask for advice</string>
    <string name="browse_now_hundreds_of_e_courses_in_all_fields_learn_now">Browse Now hundreds of e-courses   In all fields ... learn now</string>
    <string name="chat_and_speak_with_members_andconsultants_freely_through_audio_and_video">Chat and speak with members and consultants Freely through audio and video</string>
    <string name="we_have_consultants_in_all_fields_we_are_here_to_help_you_start_now">We have consultants in all fields We are here to help you ... start now</string>
    <string name="there_is_no_online_courses_found">There is no online courses found !</string>
    <string name="there_is_no_packages_available">There is no packages available !</string>
    <string name="coupon_added_successfully">Coupon added successfully !</string>
    <string name="there_is_no_cources_or_consultaions_found">There is no cources or consultaions found !</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="package_">Package</string>
    <string name="packages">Packages</string>
    <string name="subscription_type">Schedule Date And Time</string>
    <string name="send_">SEND</string>
    <string name="do_you_have_coupon">Do you have coupon ?</string>
    <string name="please_enter_your_coupon_here">Please enter your coupon here</string>
    <string name="your_coupon">Your Coupon</string>
    <string name="cancel_">Cancel</string>
    <string name="enter">Enter</string>
    <string name="how_was_your_experience">How was your experience?</string>
    <string name="your_opinion_will_help_improve_the_level_of_service">Your opinion will help improve the level of service</string>
    <string name="type_your_comment_here">Type your comment here...</string>
    <string name="may_be_later">May Be Later</string>
    <string name="select_your_appointment_request_date_and_time">Select your appointment request date and time</string>
    <string name="appointment">Appointment</string>
    <string name="yyyy_mm_dd">YYYY-MM-DD</string>
    <string name="hh_mm">HH:MM</string>
    <string name="create_post">Create Post</string>
    <string name="type_here">Type here</string>
    <string name="publish">Publish</string>
    <string name="unblock_chat">Unblock Chat</string>
    <string name="report_user">Report User</string>
    <string name="settings">Settings</string>
    <string name="report_violation_content_with_screenshot">Report Violation Content With Screenshot</string>
</resources>