<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/corner_redius_15dp_white"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/top_laft_right_corner_redius_15dp_orange"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/settings"
            android:textColor="@color/white"
            android:textSize="20sp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/report_user"
            android:id="@+id/reportUser"
            android:textColor="@color/black"
            android:textSize="13sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gainsboro" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/unblock_chat"
            android:id="@+id/blockUnBlockChat"
            android:textColor="@color/black"
            android:textSize="13sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gainsboro" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/report_violation_content_with_screenshot"
            android:id="@+id/reportViolationContent"
            android:textColor="@color/black"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/actionCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/corner_redius_15dp_orange"
            android:elevation="3dp"
            android:gravity="center"
            android:padding="13dp"
            android:paddingStart="40dp"
            android:paddingEnd="40dp"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>
</LinearLayout>
