<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:background="@drawable/corner_redius_10dp_white"
        android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/almarai_bold"
            android:gravity="center"
            android:text="@string/do_you_have_coupon"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/almarai_regular"
            android:gravity="center"
            android:text="@string/please_enter_your_coupon_here"
            android:textColor="@color/black_light"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/couponCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/corner_redius_5dp_gray"
            android:hint="@string/your_coupon"
            android:padding="13dp"
            android:textColor="@color/black"
            android:textColorHint="@color/dark_gray"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/cancelBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/corner_redius_5dp_white"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/cancel_"
                android:textAllCaps="false"
                android:fontFamily="@font/almarai_regular"
                android:textColor="@color/dark_gray"
                android:textSize="18sp" />

            <Button
                android:id="@+id/enterBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/almarai_regular"
                android:background="@drawable/corner_redius_5dp_light_green"
                android:elevation="3dp"
                android:padding="10dp"
                android:text="@string/enter"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
