<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/corner_redius_15dp_white"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/top_laft_right_corner_redius_15dp_orange"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/appointment"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/almarai_regular"
                android:gravity="center"
                android:text="@string/select_your_appointment_request_date_and_time"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <LinearLayout
                android:id="@+id/appointmentLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/corner_redius_10dp_pink_sroke_dark_gray"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="15dp">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/ic_on_time" />

                <TextView
                    android:id="@+id/appointmentData"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/almarai_bold"
                    android:hint="@string/yyyy_mm_dd"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/appointmentTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/almarai_bold"
                    android:hint="@string/hh_mm"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="visible"
            android:weightSum="2">

            <TextView
                android:id="@+id/actionCancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/corner_redius_15dp_orange"
                android:elevation="3dp"
                android:fontFamily="@font/almarai_regular"
                android:gravity="center"
                android:padding="13dp"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/actionOk"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/corner_redius_15dp_orange"
                android:elevation="3dp"
                android:fontFamily="@font/almarai_regular"
                android:gravity="center"
                android:padding="13dp"
                android:text="@string/ok"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>