<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/corner_redius_15dp_white"
        android:elevation="6dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/almarai_bold"
            android:gravity="center"
            android:text="@string/how_was_your_experience"
            android:textColor="@color/orange"
            android:textSize="16sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/almarai_bold"
            android:gravity="center"
            android:text="@string/how_was_your_experience"
            android:textColor="@color/black"
            android:textSize="23sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/almarai_regular"
            android:gravity="center"
            android:text="@string/your_opinion_will_help_improve_the_level_of_service"
            android:textColor="@color/dark_gray"
            android:textSize="13sp" />

        <RatingBar
            android:id="@+id/rating_bar"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:isIndicator="false"
            android:numStars="5"
            android:progressBackgroundTint="@color/black"
            android:progressTint="@color/yellow"
            android:rating="4"
            android:scaleX="3.3"
            android:scaleY="3.3"
            android:secondaryProgressTint="@color/yellow" />

        <TextView
            android:id="@+id/rating_based_cmd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/almarai_regular"
            android:text="very good"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/comments"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/corner_redius_15dp_ach_light_white_sroke_dark_gray"
            android:gravity="top"
            android:hint="@string/type_your_comment_here"
            android:inputType="textMultiLine"
            android:minLines="2"
            android:padding="20dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/black_light"
            android:textSize="16sp" />

        <Button
            android:id="@+id/send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/corner_redius_5dp_light_green"
            android:elevation="3dp"
            android:fontFamily="@font/almarai_bold"
            android:gravity="center"
            android:padding="13dp"
            android:text="@string/send_"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView

            android:id="@+id/mayBeLater"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/almarai_light"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/may_be_later"
            android:textColor="@color/black_light"
            android:textSize="15sp" />
    </LinearLayout>
</LinearLayout>
