<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserInterface.CreatePostActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/ach_white_light"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/orange"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingTop="15dp"
            android:paddingRight="20dp"
            android:paddingBottom="15dp">

            <ImageView
                android:id="@+id/nav_back"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/ic_left_arrow_white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/almarai_regular"
                android:text="@string/create_post"
                android:textAlignment="viewStart"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:layout_marginTop="30dp">

            <EditText
                android:id="@+id/writePost"
                android:layout_width="match_parent"
                android:layout_height="164dp"
                android:background="@drawable/corner_radius_4dp_white_stroke_gray"
                android:fontFamily="@font/almarai_regular"
                android:gravity="top|start"
                android:hint="@string/type_here"
                android:inputType="textMultiLine"
                android:padding="20dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black_light"
                android:textSize="16sp" />

            <Button
                android:id="@+id/postPublish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/corner_redius_5dp_light_green"
                android:elevation="3dp"
                android:fontFamily="@font/almarai_bold"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/publish"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>


    </LinearLayout>

</RelativeLayout>